<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/edit_text_hint"
            android:inputType="text" />

        <TextView
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="8dp"/>

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="8dp"/>

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:layout_marginLeft="8dp"
                android:onClick="decrementQuantity"/>

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:layout_marginLeft="8dp"
                android:onClick="incrementQuantity"/>
        </LinearLayout>

        <TextView
            android:text="@string/order_summary"
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$5"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_margin="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textAllCaps="true"
            android:layout_marginLeft="8dp"
            android:onClick="submitOrder"/>

    </LinearLayout>

</ScrollView>